...
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
            android:id="@+id/main_container"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_layout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

...
